<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_vertical|center_horizontal">
	
	<TextView
		android:id="@+id/tv_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_vertical|center_horizontal"
		android:padding="16dp"
		android:text="@string/no_notebook_yet"
		android:textAppearance="?android:attr/textAppearanceLarge"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.4"/>
	
	<Button
		android:id="@+id/b_create"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:padding="12dp"
		android:text="@string/create_Notebook"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_title"/>
	
	<TextView
		android:id="@+id/tv_sub"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginTop="8dp"
		android:gravity="center_vertical|center_horizontal"
		android:text="@string/or_import"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium"
		app:layout_constraintBottom_toBottomOf="@+id/b_import"
		app:layout_constraintEnd_toStartOf="@+id/b_import"
		app:layout_constraintTop_toTopOf="@+id/b_import"
		android:layout_marginRight="8dp"/>
	
	<Button
		android:id="@+id/b_import"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:padding="12dp"
		android:text="@string/import_Notebook"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginRight="8dp"/>

</android.support.constraint.ConstraintLayout>