<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:paddingEnd="8dp"
	android:paddingLeft="8dp"
	android:paddingRight="8dp"
	android:paddingStart="8dp">
	
	
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/adding_note"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
	
	<FrameLayout
		android:id="@+id/fl_newContent"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		tools:layout_height="50dp">
	
	</FrameLayout>
	
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/conflict_note"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
	
	<FrameLayout
		android:id="@+id/fl_conflictContent"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		tools:layout_height="50dp">
	
	</FrameLayout>
	
	<CheckBox
		android:id="@+id/cb_coverProgress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="end"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:checked="false"
		android:text="@string/reset_memory_progress"
		android:visibility="gone"
		tools:visibility="visible"/>


</LinearLayout>
