<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	
	<android.support.constraint.ConstraintLayout
		android:id="@+id/vg_titleBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/colorPrimary"
		android:paddingEnd="8dp"
		android:paddingLeft="8dp"
		android:paddingRight="8dp"
		android:paddingStart="8dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent">
		
		<TextView
			android:id="@+id/tv_title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/NotebookShelf"
			android:textAppearance="@style/TextAppearance.AppCompat.Large"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/b_info"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>
		
		<Button
			android:id="@+id/b_nightMode"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/night_mode_off"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>
		
		<ImageButton
			android:id="@+id/b_info"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/b_nightMode"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="1.0"
			app:srcCompat="@drawable/ic_info"
			android:contentDescription="@string/update_logs"/>
	</android.support.constraint.ConstraintLayout>
	
	<android.support.constraint.ConstraintLayout
		android:id="@+id/cl_buttons"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:paddingEnd="8dp"
		android:paddingLeft="8dp"
		android:paddingRight="8dp"
		android:paddingStart="8dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/vg_titleBar">
		
		<Button
			android:id="@+id/b_create"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/create_Notebook"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/b_import"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>
		
		<Button
			android:id="@+id/b_import"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/import_Notebook"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/b_merge"
			app:layout_constraintStart_toEndOf="@+id/b_create"
			app:layout_constraintTop_toTopOf="parent"/>
		
		<Button
			android:id="@+id/b_merge"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/merge_Notebook"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/b_import"
			app:layout_constraintTop_toTopOf="parent"/>
	</android.support.constraint.ConstraintLayout>
	
	<ListView
		android:id="@+id/lv_notebooks"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:paddingEnd="8dp"
		android:paddingLeft="8dp"
		android:paddingRight="8dp"
		android:paddingStart="8dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/cl_buttons">
	
	</ListView>

</android.support.constraint.ConstraintLayout>