<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
	
	<TextView
		android:id="@+id/tv_question"
		
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		
		android:layout_weight="0"
		android:gravity="top|start"
		
		android:padding="16dp"
		android:textAppearance="?android:attr/textAppearanceLarge"
		
		android:textSize="40sp"
		tools:text="слово"/>
	
	<TextView
		android:id="@+id/tv_answer"
		
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		
		android:layout_weight="0"
		android:gravity="top|start"
		
		android:padding="16dp"
		android:textAppearance="?android:attr/textAppearanceLarge"
		
		android:textSize="20sp"
		tools:text="tv_answer"/>
	
	<Button
		android:id="@+id/b_show"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_weight="1"
		android:gravity="center"
		android:text="@string/show"
		style="?android:attr/buttonBarStyle"/>
	
	<LinearLayout
		android:id="@+id/ll_result_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0"
		android:orientation="horizontal"
		android:visibility="invisible"
		tools:visibility="visible">
		
		<Button
			android:id="@+id/b_remembered"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/forgot"/>
		
		<Button
			android:id="@+id/b_forgot"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/remembered"/>
	</LinearLayout>

</LinearLayout>