<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	
	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0"
		android:background="?attr/colorPrimary"
		android:paddingEnd="8dp"
		android:paddingLeft="8dp"
		android:paddingRight="8dp"
		android:paddingStart="8dp">
		
		<TextView
			android:id="@+id/tv_title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:padding="8dp"
			android:textAppearance="@style/TextAppearance.AppCompat.Large"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/b_mass"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:text="@string/Note_create"/>
		
		<Button
			android:id="@+id/b_mass"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:text="@string/mass"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>
	</android.support.constraint.ConstraintLayout>
	
	<FrameLayout
		android:id="@+id/fl_noteContent"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:padding="8dp">
	
	</FrameLayout>
	
	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0"
		android:paddingBottom="8dp"
		android:paddingEnd="8dp"
		android:paddingLeft="8dp"
		android:paddingRight="8dp"
		android:paddingStart="8dp">
		
		<Button
			android:id="@+id/b_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@android:string/cancel"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"/>
		
		<Button
			android:id="@+id/b_ok"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/ok"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"/>
	</android.support.constraint.ConstraintLayout>

</LinearLayout>
