<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<TextView
		android:id="@+id/tv_question"
		
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		
		android:gravity="top|start"
		
		android:padding="16dp"
		android:textAppearance="?android:attr/textAppearanceLarge"
		
		android:textSize="36sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:text="слово"/>
	
	<TextView
		android:id="@+id/tv_answer"
		
		android:layout_width="0dp"
		android:layout_height="0dp"
		
		android:gravity="top|start"
		android:padding="16dp"
		
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/cl_resultBar"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_question"
		tools:text="tv_answer"/>
	
	<Button
		android:id="@+id/b_show"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="48dp"
		android:text="@string/show"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_question"/>
	
	<android.support.constraint.ConstraintLayout
		android:id="@+id/cl_resultBar"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="48dp"
		android:orientation="horizontal"
		android:visibility="invisible"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		tools:visibility="visible">
		
		<Button
			android:id="@+id/b_forgot"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingBottom="24dp"
			android:text="@string/forgot"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/b_remembered"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>
		
		<Button
			android:id="@+id/b_remembered"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/remembered"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/b_forgot"
			app:layout_constraintTop_toTopOf="parent"/>
	</android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>